syntax = "proto3";

package demo;

option go_package = "proto/";

message Product {
  uint32 id = 1;
  string name = 2;
  uint32 price = 3;
}

message GetProductRequest {
  uint32 id = 1;
}

message GetProductResponse {
  Product product = 1;
}

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {};
}
